# FluidSolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  optimization_flags.cmake
include/: simulation_setup.h  solver.h  solver2D.h  solver3D.h  solver_data_structure.h  time_measurement.h
script/: error2d.R  error3d.R  plotPdf.R
simulation_setup/2d/: base  flame  huge
simulation_setup/3d/: base  huge
src/: CMakeLists.txt  main.c  simulation_setup.c  solver.c  solver2D.c  solver3D.c
